Tried to fix the .bat file. Created an executable .jar file.